# bcratos

./: .pre-commit-config.yaml  CMakeLists.txt  build
.devcontainer/: devcontainer.json
.github/workflows/: actions.yml
docker/: Dockerfile
grabobject/: CMakeLists.txt
grabobject/include/: arm.h  common.h
grabobject/src/: arm.cpp  config.yaml  main.cpp  move_arm.cpp
